WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237223
[WebAuthn] Fallback to attestation=none whenever attestation fails
https://bugs.webkit.org/show_bug.cgi?id=237223
Summary
[WebAuthn] Fallback to attestation=none whenever attestation fails
pascoe@apple.com
Reported
2022-02-25 13:32:59 PST
As noted by a recent WebAuthn issue:
https://github.com/w3c/webauthn/issues/1697
, we are the only platform that errors out whenever a requested attestation fails. This leads to a bad user experience when attestation is requested, but not strictly required. Attestation is not possible for example, when using platform synced keys.
Attachments
Patch
(5.80 KB, patch)
2022-02-25 13:58 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2022-02-25 13:33:27 PST
rdar://88767812
pascoe@apple.com
Comment 2
2022-02-25 13:58:32 PST
Created
attachment 453259
[details]
Patch
Brent Fulgham
Comment 3
2022-02-25 16:32:17 PST
Comment on
attachment 453259
[details]
Patch r=me
EWS
Comment 4
2022-02-25 17:48:23 PST
Committed
r290539
(
247817@main
): <
https://commits.webkit.org/247817@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453259
[details]
.
Brent Fulgham
Comment 5
2022-03-22 14:12:31 PDT
***
Bug 236698
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug