Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm
@@ -465,7 +465,9 @@ void LocalAuthenticator::continueMakeCredentialAfterAttested(Vector<uint8_t>&& c
     auto& creationOptions = std::get<PublicKeyCredentialCreationOptions>(requestData().options);
 
     if (error) {
-        receiveException({ UnknownError, makeString("Couldn't attest: ", String(error.localizedDescription)) });
+        LOG_ERROR("Couldn't attest: %s", String(error.localizedDescription).utf8().data());
+        auto attestationObject = buildAttestationObject(WTFMove(authData), "", { }, AttestationConveyancePreference::None);
+        receiveRespond(AuthenticatorAttestationResponse::create(credentialId, attestationObject, AuthenticatorAttachment::Platform));
         return;
     }
     // Attestation Certificate and Attestation Issuing CA
